# ai-video

./: .dockerignore  .env.backup  .env.example  .gitignore  API.md  CHANGELOG.md  Dockerfile  FEATURE_BOUNDARY.md  PROJECT_CONSTITUTION.md  README.md  TECH_CONSTRAINTS.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.workspace.ts
.github/: dependabot.yml  pull_request_template.md
ai-video-main/: .env.example  API.md  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  PIPELINE.md  QUALITY_CONTROL.md  README.md  package-lock.json  package.json
ai-video-main/ui/src-tauri/: Cargo.toml
browser-shell/: README.md  electron-builder.json  package-lock.json  package.json  tsconfig.json  tsconfig.preload.json
data/: models.json  provider-presets.json  queue-detection-presets.json  selector-cache.json
docs/: AI-video.md  API.md  COMPILER_ARCHITECTURE.md  DEPLOYMENT.md  DOM_DETECTION_SYSTEM.md  PIPELINE_AUDIT_REPORT.md  PIPELINE_PROMPT_DOCUMENTATION.md  PROMPT_AUDIT_proj_1775945640705.md  TRACE_REPLAY_DESIGN.md  api.md  architecture.md  ci-cd.md  deployment.md  manual-test-log.md  全面审计 — 反馈闭环 + 重新生成能力 + UI 交互完整性.md
scripts/: build-sidecar.sh  cleanup-project.py  coverage-gaps.cjs  extract-prompt-details.py  extract-prompts.py  generate-icons.sh  health-check.mjs  inspect-gemini-buttons.mjs  lint-dependencies.mjs  retry-video-with-aivideomaker.mjs  run-free-pipeline.mjs  run-pipeline.mjs  screenshot-cdp.mjs  start.sh
shared/: bootPhase.d.ts  bootPhase.js  bootPhase.js.map  bootPhase.ts  dashboardStatus.ts  types.ts
src/: README.md  accountManager.ts  (+38 more)
(+481 files in other folders)
