[package]
name = "ai-video-pipeline"
version = "0.1.0"
description = "AI Video Pipeline — Tauri Desktop App"
edition = "2021"

[lib]
name = "ai_video_pipeline_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
